# various_works

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
include/: bitwise_operations.h  chess_knight_problem.h  circular_buffer.h  codesignal_tasks.h  codility_tasks.h  fibonacci_impl.h  knapsack_impl.h  online_assessments.h  stack_with_getMin.h  trial_codes.h
src/: main.cpp
